syntax = "proto3";

package template;

import "contracts/template.proto";

option python_package = "proto";

// gRPC API for TemplateService.
service TemplateService {
  // Get a template by id.
  rpc GetTemplate (GetTemplateRequest) returns (Template);

  // Semantic search of templates.
  rpc FindTemplates (FindTemplatesRequest) returns (FindTemplatesResponse);
}

message GetTemplateRequest {
  string template_id = 1;
}

message FindTemplatesRequest {
  string query = 1;
  string category = 2;
  uint32 top_k = 3;
  float score_threshold = 4;
  float alpha = 5;
}

message FindTemplatesResponse {
  repeated Template templates = 1;
}
